hphp/test/zend/good/Zend/tests/bug50174.php.skipif
<?php if (!extension_loaded('reflection') || !extension_loaded('spl')) print "skip SPL and reflection extensions required"; ?>