hphp/test/zend/bad/ext/date/tests/bug33532.php.skipif
<?php
if(PHP_OS == 'Darwin' || defined('PHP_WINDOWS_VERSION_MAJOR')) die("skip strftime uses system TZ on Darwin and Windows");
?>